RESOLVED FIXED105394
Fix regression from r137923 that caused all tiles to paint when scrolling
https://bugs.webkit.org/show_bug.cgi?id=105394
Summary Fix regression from r137923 that caused all tiles to paint when scrolling
Simon Fraser (smfr)
Reported 2012-12-18 23:29:42 PST
Fix regression from r137923 that caused all tiles to paint when scrolling
Attachments
Patch (2.46 KB, patch)
2012-12-18 23:32 PST, Simon Fraser (smfr)
dino: review+
Simon Fraser (smfr)
Comment 1 2012-12-18 23:32:43 PST
Simon Fraser (smfr)
Comment 2 2012-12-18 23:33:21 PST
Simon Fraser (smfr)
Comment 3 2012-12-19 10:08:33 PST
Note You need to log in before you can comment on or make changes to this bug.