Fix regression from r137923 that caused all tiles to paint when scrolling https://bugs.webkit.org/show_bug.cgi?id=105394

Reviewed by Dean Jackson.

r137923 removed a 'continue' from the loop that ensures we have tile coverage,
but this caused us to issue repaints for all existing tiles.

Fix to 'continue' when the tile size is unchanged. Also remove 'primaryLayerCount'
which was unused.

* platform/graphics/ca/mac/TileCache.mm:
(WebCore::TileCache::revalidateTiles):

git-svn-id: svn://svn.chromium.org/blink/trunk@138177 bbb929c8-8fbe-4397-9dbb-9b2b20218538